更新房型介紹頁面，修改標題及導航欄，調整聯絡資訊及社交媒體連結

--- a/rooms.html
+++ b/rooms.html
@@ -3,33 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>房型介紹 - 豪華精品酒店</title>
+    <title>房型介紹 - 山林靜境民宿</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/rooms.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   </head>
   <body>
-    <!-- Header -->
-    <header class="site-header">
-      <div class="header-container">
+    <header class="header">
+      <nav class="nav-container">
         <div class="logo">
-          <a href="index.html">
-            <h1>豪華精品酒店</h1>
-          </a>
+          <a href="/">山林靜境民宿</a>
         </div>
-        <nav class="main-nav">
-          <ul>
-            <li><a href="index.html">首頁</a></li>
-            <li><a href="rooms.html" class="active">房型介紹</a></li>
-            <li><a href="location.html">位置交通</a></li>
-            <li><a href="contact.html">聯絡我們</a></li>
-            <li><a href="booking.html" class="booking-btn">立即訂房</a></li>
-          </ul>
-        </nav>
-        <button class="mobile-menu-btn">
-          <i class="fas fa-bars"></i>
-        </button>
-      </div>
+        <div class="menu-toggle">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <ul class="nav-menu">
+          <li><a href="/">首頁</a></li>
+          <li><a href="/rooms.html" class="active">房型介紹</a></li>
+          <li><a href="/booking.html">線上訂房</a></li>
+          <li><a href="/location.html">交通位置</a></li>
+          <li><a href="/contact.html">聯絡我們</a></li>
+          <li class="login-btn"><a href="/login.html">登入/註冊</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main class="rooms-container">
@@ -171,35 +169,34 @@
       </section>
     </main>
 
-    <!-- Footer -->
-    <footer class="site-footer">
-      <div class="footer-container">
+    <footer class="footer">
+      <div class="footer-content">
         <div class="footer-section">
           <h3>聯絡資訊</h3>
-          <p><i class="fas fa-map-marker-alt"></i> 台北市信義區信義路五段7號</p>
-          <p><i class="fas fa-phone"></i> (02) 2720-8899</p>
-          <p><i class="fas fa-envelope"></i> contact@luxuryhotel.com</p>
+          <p>電話：(02) 1234-5678</p>
+          <p>地址：台灣省山林市安靜區寧靜路123號</p>
+          <p>Email：contact@forest-hotel.com</p>
         </div>
         <div class="footer-section">
           <h3>快速連結</h3>
           <ul>
-            <li><a href="index.html">首頁</a></li>
-            <li><a href="rooms.html">房型介紹</a></li>
-            <li><a href="location.html">位置交通</a></li>
-            <li><a href="contact.html">聯絡我們</a></li>
+            <li><a href="/rooms.html">房型介紹</a></li>
+            <li><a href="/booking.html">線上訂房</a></li>
+            <li><a href="/location.html">交通資訊</a></li>
+            <li><a href="/contact.html">聯絡我們</a></li>
           </ul>
         </div>
         <div class="footer-section">
           <h3>追蹤我們</h3>
           <div class="social-links">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-line"></i></a>
+            <a href="#" target="_blank">Facebook</a>
+            <a href="#" target="_blank">Instagram</a>
+            <a href="#" target="_blank">Line</a>
           </div>
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 豪華精品酒店 版權所有</p>
+        <p>&copy; 2025 山林靜境民宿 All Rights Reserved.</p>
       </div>
     </footer>
 
