調整聯絡頁面及房型介紹頁面樣式，新增主要內容區塊及容器排版

--- a/rooms.html
+++ b/rooms.html
@@ -30,142 +30,148 @@
       </nav>
     </header>
 
-    <main class="rooms-container">
-      <div class="page-banner">
-        <h1>精緻客房，尊榮享受</h1>
-      </div>
+    <main>
+      <section class="page-banner">
+        <div class="banner-content">
+          <h1>精緻客房，尊榮享受</h1>
+        </div>
+      </section>
 
-      <h1 class="page-title">房型介紹</h1>
+      <section class="rooms-section">
+        <div class="container">
+          <h1 class="page-title">房型介紹</h1>
 
-      <!-- 豪華雙人房 -->
-      <article class="room-card">
-        <div class="room-photos">
-          <img src="images/deluxe-double.jpg" alt="豪華雙人房" class="main-photo" />
-          <div class="photo-gallery">
-            <img src="images/deluxe-double-2.jpg" alt="豪華雙人房浴室" class="thumbnail" />
-            <img src="images/deluxe-double-3.jpg" alt="豪華雙人房景觀" class="thumbnail" />
-          </div>
-        </div>
-        <div class="room-info">
-          <h2>豪華雙人房</h2>
-          <div class="room-features">
-            <span><i class="fas fa-bed"></i> 1張大床</span>
-            <span><i class="fas fa-user-friends"></i> 2人入住</span>
-            <span><i class="fas fa-vector-square"></i> 28坪</span>
-          </div>
-          <div class="room-amenities">
-            <h3>房間設施</h3>
-            <ul>
-              <li><i class="fas fa-wifi"></i> 高速WiFi</li>
-              <li><i class="fas fa-tv"></i> 55吋4K電視</li>
-              <li><i class="fas fa-bath"></i> 按摩浴缸</li>
-              <li><i class="fas fa-mountain"></i> 山景陽台</li>
-            </ul>
-          </div>
-        </div>
-        <div class="room-booking">
-          <div class="price">
-            <span class="amount">NT$ 6,800</span>
-            <span class="unit">/ 晚</span>
-          </div>
-          <button class="compare-btn" data-room="deluxe-double">加入比較</button>
-          <button class="book-btn">立即預訂</button>
-          <div class="availability">目前尚有空房</div>
-        </div>
-      </article>
+          <!-- 豪華雙人房 -->
+          <article class="room-card">
+            <div class="room-photos">
+              <img src="images/deluxe-double.jpg" alt="豪華雙人房" class="main-photo" />
+              <div class="photo-gallery">
+                <img src="images/deluxe-double-2.jpg" alt="豪華雙人房浴室" class="thumbnail" />
+                <img src="images/deluxe-double-3.jpg" alt="豪華雙人房景觀" class="thumbnail" />
+              </div>
+            </div>
+            <div class="room-info">
+              <h2>豪華雙人房</h2>
+              <div class="room-features">
+                <span><i class="fas fa-bed"></i> 1張大床</span>
+                <span><i class="fas fa-user-friends"></i> 2人入住</span>
+                <span><i class="fas fa-vector-square"></i> 28坪</span>
+              </div>
+              <div class="room-amenities">
+                <h3>房間設施</h3>
+                <ul>
+                  <li><i class="fas fa-wifi"></i> 高速WiFi</li>
+                  <li><i class="fas fa-tv"></i> 55吋4K電視</li>
+                  <li><i class="fas fa-bath"></i> 按摩浴缸</li>
+                  <li><i class="fas fa-mountain"></i> 山景陽台</li>
+                </ul>
+              </div>
+            </div>
+            <div class="room-booking">
+              <div class="price">
+                <span class="amount">NT$ 6,800</span>
+                <span class="unit">/ 晚</span>
+              </div>
+              <button class="compare-btn" data-room="deluxe-double">加入比較</button>
+              <button class="book-btn">立即預訂</button>
+              <div class="availability">目前尚有空房</div>
+            </div>
+          </article>
 
-      <!-- 豪華四人房 -->
-      <article class="room-card">
-        <div class="room-photos">
-          <img src="images/family-suite.jpg" alt="豪華四人房" class="main-photo" />
-          <div class="photo-gallery">
-            <img src="images/family-suite-2.jpg" alt="豪華四人房客廳" class="thumbnail" />
-            <img src="images/family-suite-3.jpg" alt="豪華四人房用餐區" class="thumbnail" />
-          </div>
-        </div>
-        <div class="room-info">
-          <h2>豪華四人房</h2>
-          <div class="room-features">
-            <span><i class="fas fa-bed"></i> 2張大床</span>
-            <span><i class="fas fa-user-friends"></i> 4人入住</span>
-            <span><i class="fas fa-vector-square"></i> 35坪</span>
-          </div>
-          <div class="room-amenities">
-            <h3>房間設施</h3>
-            <ul>
-              <li><i class="fas fa-wifi"></i> 高速WiFi</li>
-              <li><i class="fas fa-tv"></i> 65吋4K電視</li>
-              <li><i class="fas fa-couch"></i> 獨立客廳</li>
-              <li><i class="fas fa-utensils"></i> 迷你廚房</li>
-            </ul>
-          </div>
-        </div>
-        <div class="room-booking">
-          <div class="price">
-            <span class="amount">NT$ 9,800</span>
-            <span class="unit">/ 晚</span>
-          </div>
-          <button class="compare-btn" data-room="family-suite">加入比較</button>
-          <button class="book-btn">立即預訂</button>
-          <div class="availability">目前尚有空房</div>
-        </div>
-      </article>
+          <!-- 豪華四人房 -->
+          <article class="room-card">
+            <div class="room-photos">
+              <img src="images/family-suite.jpg" alt="豪華四人房" class="main-photo" />
+              <div class="photo-gallery">
+                <img src="images/family-suite-2.jpg" alt="豪華四人房客廳" class="thumbnail" />
+                <img src="images/family-suite-3.jpg" alt="豪華四人房用餐區" class="thumbnail" />
+              </div>
+            </div>
+            <div class="room-info">
+              <h2>豪華四人房</h2>
+              <div class="room-features">
+                <span><i class="fas fa-bed"></i> 2張大床</span>
+                <span><i class="fas fa-user-friends"></i> 4人入住</span>
+                <span><i class="fas fa-vector-square"></i> 35坪</span>
+              </div>
+              <div class="room-amenities">
+                <h3>房間設施</h3>
+                <ul>
+                  <li><i class="fas fa-wifi"></i> 高速WiFi</li>
+                  <li><i class="fas fa-tv"></i> 65吋4K電視</li>
+                  <li><i class="fas fa-couch"></i> 獨立客廳</li>
+                  <li><i class="fas fa-utensils"></i> 迷你廚房</li>
+                </ul>
+              </div>
+            </div>
+            <div class="room-booking">
+              <div class="price">
+                <span class="amount">NT$ 9,800</span>
+                <span class="unit">/ 晚</span>
+              </div>
+              <button class="compare-btn" data-room="family-suite">加入比較</button>
+              <button class="book-btn">立即預訂</button>
+              <div class="availability">目前尚有空房</div>
+            </div>
+          </article>
 
-      <!-- 總統套房 -->
-      <article class="room-card">
-        <div class="room-photos">
-          <img src="images/presidential-suite.jpg" alt="總統套房" class="main-photo" />
-          <div class="photo-gallery">
-            <img src="images/presidential-suite-2.jpg" alt="總統套房客廳" class="thumbnail" />
-            <img src="images/presidential-suite-3.jpg" alt="總統套房會議室" class="thumbnail" />
-          </div>
-        </div>
-        <div class="room-info">
-          <h2>總統套房</h2>
-          <div class="room-features">
-            <span><i class="fas fa-bed"></i> 1張特大床</span>
-            <span><i class="fas fa-user-friends"></i> 2-4人入住</span>
-            <span><i class="fas fa-vector-square"></i> 65坪</span>
-          </div>
-          <div class="room-amenities">
-            <h3>房間設施</h3>
-            <ul>
-              <li><i class="fas fa-wifi"></i> 高速WiFi</li>
-              <li><i class="fas fa-tv"></i> 75吋8K電視</li>
-              <li><i class="fas fa-glasses"></i> 專屬管家服務</li>
-              <li><i class="fas fa-car"></i> 機場接送</li>
-            </ul>
-          </div>
-        </div>
-        <div class="room-booking">
-          <div class="price">
-            <span class="amount">NT$ 28,800</span>
-            <span class="unit">/ 晚</span>
-          </div>
-          <button class="compare-btn" data-room="presidential-suite">加入比較</button>
-          <button class="book-btn">立即預訂</button>
-          <div class="availability">目前尚有空房</div>
-        </div>
-      </article>
+          <!-- 總統套房 -->
+          <article class="room-card">
+            <div class="room-photos">
+              <img src="images/presidential-suite.jpg" alt="總統套房" class="main-photo" />
+              <div class="photo-gallery">
+                <img src="images/presidential-suite-2.jpg" alt="總統套房客廳" class="thumbnail" />
+                <img src="images/presidential-suite-3.jpg" alt="總統套房會議室" class="thumbnail" />
+              </div>
+            </div>
+            <div class="room-info">
+              <h2>總統套房</h2>
+              <div class="room-features">
+                <span><i class="fas fa-bed"></i> 1張特大床</span>
+                <span><i class="fas fa-user-friends"></i> 2-4人入住</span>
+                <span><i class="fas fa-vector-square"></i> 65坪</span>
+              </div>
+              <div class="room-amenities">
+                <h3>房間設施</h3>
+                <ul>
+                  <li><i class="fas fa-wifi"></i> 高速WiFi</li>
+                  <li><i class="fas fa-tv"></i> 75吋8K電視</li>
+                  <li><i class="fas fa-glasses"></i> 專屬管家服務</li>
+                  <li><i class="fas fa-car"></i> 機場接送</li>
+                </ul>
+              </div>
+            </div>
+            <div class="room-booking">
+              <div class="price">
+                <span class="amount">NT$ 28,800</span>
+                <span class="unit">/ 晚</span>
+              </div>
+              <button class="compare-btn" data-room="presidential-suite">加入比較</button>
+              <button class="book-btn">立即預訂</button>
+              <div class="availability">目前尚有空房</div>
+            </div>
+          </article>
 
-      <!-- 房型比較表 -->
-      <section id="room-comparison" class="room-comparison hidden">
-        <h2>房型比較</h2>
-        <table id="comparison-table">
-          <thead>
-            <tr>
-              <th>房型</th>
-              <th>坪數</th>
-              <th>入住人數</th>
-              <th>價格</th>
-              <th>主要設施</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <!-- JavaScript 動態填充比較內容 -->
-          </tbody>
-        </table>
+          <!-- 房型比較表 -->
+          <section id="room-comparison" class="room-comparison hidden">
+            <h2>房型比較</h2>
+            <table id="comparison-table">
+              <thead>
+                <tr>
+                  <th>房型</th>
+                  <th>坪數</th>
+                  <th>入住人數</th>
+                  <th>價格</th>
+                  <th>主要設施</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- JavaScript 動態填充比較內容 -->
+              </tbody>
+            </table>
+          </section>
+        </div>
       </section>
     </main>
 
