調整頁面樣式，新增容器以改善排版，並為多個頁面添加響應式設計

--- a/index.html
+++ b/index.html
@@ -40,47 +40,55 @@
       </section>
 
       <section class="features">
-        <h2>民宿特色</h2>
-        <div class="feature-grid">
-          <div class="feature-item">
-            <img src="images/view.jpg" alt="優美景觀" loading="lazy" />
-            <h3>絕美山景</h3>
-            <p>坐擁壯麗山景，讓您飽覽自然之美</p>
-          </div>
-          <div class="feature-item">
-            <img src="images/room.jpg" alt="舒適客房" loading="lazy" />
-            <h3>精緻客房</h3>
-            <p>提供溫馨舒適的住宿環境</p>
-          </div>
-          <div class="feature-item">
-            <img src="images/service.jpg" alt="專業服務" loading="lazy" />
-            <h3>貼心服務</h3>
-            <p>專業親切的服務團隊</p>
+        <div class="container">
+          <h2>民宿特色</h2>
+          <div class="feature-grid">
+            <div class="feature-item">
+              <img src="images/view.jpg" alt="優美景觀" loading="lazy" />
+              <h3>絕美山景</h3>
+              <p>坐擁壯麗山景，讓您飽覽自然之美</p>
+            </div>
+            <div class="feature-item">
+              <img src="images/room.jpg" alt="舒適客房" loading="lazy" />
+              <h3>精緻客房</h3>
+              <p>提供溫馨舒適的住宿環境</p>
+            </div>
+            <div class="feature-item">
+              <img src="images/service.jpg" alt="專業服務" loading="lazy" />
+              <h3>貼心服務</h3>
+              <p>專業親切的服務團隊</p>
+            </div>
           </div>
         </div>
       </section>
 
       <section class="about">
-        <h2>關於我們</h2>
-        <div class="about-content">
-          <div class="about-text">
-            <p>山林靜境民宿座落於山林之間，是您遠離城市喧囂的完美選擇。我們提供優質的住宿環境，讓您能夠完全放鬆，享受寧靜時光。</p>
+        <div class="container">
+          <h2>關於我們</h2>
+          <div class="about-content">
+            <div class="about-text">
+              <p>山林靜境民宿座落於山林之間，是您遠離城市喧囂的完美選擇。我們提供優質的住宿環境，讓您能夠完全放鬆，享受寧靜時光。</p>
+            </div>
           </div>
         </div>
       </section>
 
       <section class="room-preview">
-        <h2>熱門房型</h2>
-        <div class="room-grid">
-          <!-- 房型預覽卡片將通過 JavaScript 動態載入 -->
+        <div class="container">
+          <h2>熱門房型</h2>
+          <div class="room-grid">
+            <!-- 房型預覽卡片將通過 JavaScript 動態載入 -->
+          </div>
+          <a href="/rooms.html" class="view-all-button">查看所有房型</a>
         </div>
-        <a href="/rooms.html" class="view-all-button">查看所有房型</a>
       </section>
 
       <section class="testimonials">
-        <h2>旅客評價</h2>
-        <div class="testimonial-slider">
-          <!-- 評價內容將通過 JavaScript 動態載入 -->
+        <div class="container">
+          <h2>旅客評價</h2>
+          <div class="testimonial-slider">
+            <!-- 評價內容將通過 JavaScript 動態載入 -->
+          </div>
         </div>
       </section>
     </main>
