--- a/location.html
+++ b/location.html
@@ -33,9 +33,11 @@
 
     <main>
       <section class="page-banner">
-        <div class="banner-content">
-          <h1>交通位置</h1>
-          <p>輕鬆抵達，享受悠閒</p>
+        <div class="container">
+          <div class="banner-content">
+            <h1>交通位置</h1>
+            <p>輕鬆抵達，享受悠閒</p>
+          </div>
         </div>
       </section>
 
