--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,11 @@
 
     <main>
       <section class="page-banner">
-        <div class="banner-content">
-          <h1>聯絡我們</h1>
-          <p>我們期待為您提供協助</p>
+        <div class="container">
+          <div class="banner-content">
+            <h1>聯絡我們</h1>
+            <p>我們期待為您提供協助</p>
+          </div>
         </div>
       </section>
 
