--- a/rooms.html
+++ b/rooms.html
@@ -32,8 +32,10 @@
 
     <main>
       <section class="page-banner">
-        <div class="banner-content">
-          <h1>精緻客房，尊榮享受</h1>
+        <div class="container">
+          <div class="banner-content">
+            <h1>精緻客房，尊榮享受</h1>
+          </div>
         </div>
       </section>
 
