更新住宿特色區域，修改標題及圖片，優化描述文字以提升內容吸引力

--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
 
       <section class="features">
         <div class="container">
-          <h2>民宿特色</h2>
+          <h2>住宿特色</h2>
           <div class="feature-grid">
             <div class="feature-item">
-              <img src="images/view.jpg" alt="優美景觀" loading="lazy" />
+              <img src="images/banner.jpg" alt="絕美山景" loading="lazy" />
               <h3>絕美山景</h3>
-              <p>坐擁壯麗山景，讓您飽覽自然之美</p>
+              <p>在房間內就能欣賞壯麗的山林美景</p>
             </div>
             <div class="feature-item">
-              <img src="images/room.jpg" alt="舒適客房" loading="lazy" />
+              <img src="images/family-suite.jpg" alt="家庭套房" loading="lazy" />
               <h3>精緻客房</h3>
-              <p>提供溫馨舒適的住宿環境</p>
+              <p>體驗我們精心打造的舒適空間</p>
             </div>
             <div class="feature-item">
-              <img src="images/service.jpg" alt="專業服務" loading="lazy" />
+              <img src="images/hotel-service.jpg" alt="專業服務" loading="lazy" />
               <h3>貼心服務</h3>
-              <p>專業親切的服務團隊</p>
+              <p>專業的服務團隊隨時為您服務</p>
             </div>
           </div>
         </div>
