更新房型圖片，替換為更精確的檔案名稱以提升顯示效果

--- a/booking.html
+++ b/booking.html
@@ -67,7 +67,7 @@
                       <input type="radio" id="room1" name="roomType" value="mountain" required />
                       <label for="room1">
                         <div class="room-details">
-                          <img src="images/room1.jpg" alt="山景豪華雙人房" />
+                          <img src="images/deluxe-double.jpg" alt="山景豪華雙人房" />
                           <div class="room-info">
                             <h4>山景豪華雙人房</h4>
                             <p>NT$ 3,800 / 晚</p>
@@ -79,7 +79,7 @@
                       <input type="radio" id="room2" name="roomType" value="family" />
                       <label for="room2">
                         <div class="room-details">
-                          <img src="images/room2.jpg" alt="溫馨家庭套房" />
+                          <img src="images/family-suite.jpg" alt="溫馨家庭套房" />
                           <div class="room-info">
                             <h4>溫馨家庭套房</h4>
                             <p>NT$ 4,500 / 晚</p>
@@ -91,7 +91,7 @@
                       <input type="radio" id="room3" name="roomType" value="single" />
                       <label for="room3">
                         <div class="room-details">
-                          <img src="images/room3.jpg" alt="精緻單人房" />
+                          <img src="images/presidential-suite.jpg" alt="精緻單人房" />
                           <div class="room-info">
                             <h4>精緻單人房</h4>
                             <p>NT$ 2,800 / 晚</p>
