移除房型選擇的必填屬性，簡化表單驗證邏輯

--- a/booking.html
+++ b/booking.html
@@ -64,7 +64,7 @@
                   <h3>選擇房型</h3>
                   <div class="room-selection">
                     <div class="room-option">
-                      <input type="radio" id="room1" name="roomType" value="mountain" required />
+                      <input type="radio" id="room1" name="roomType" value="mountain" />
                       <label for="room1">
                         <div class="room-details">
                           <img src="images/deluxe-double.jpg" alt="山景豪華雙人房" />
