--- a/location.html
+++ b/location.html
@@ -106,7 +106,7 @@
             <h2>周邊景點</h2>
             <div class="attractions-grid">
               <div class="attraction-card">
-                <img src="images/attraction1.jpg" alt="山林步道" loading="lazy" />
+                <img src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e" alt="山林步道" loading="lazy" />
                 <div class="attraction-content">
                   <h3>山林步道</h3>
                   <p class="distance">距離：500公尺</p>
@@ -115,7 +115,7 @@
               </div>
 
               <div class="attraction-card">
-                <img src="images/attraction2.jpg" alt="觀景台" loading="lazy" />
+                <img src="https://images.unsplash.com/photo-1470252649378-9c29740c9fa8" alt="觀景台" loading="lazy" />
                 <div class="attraction-content">
                   <h3>山頂觀景台</h3>
                   <p class="distance">距離：1.2公里</p>
@@ -124,7 +124,7 @@
               </div>
 
               <div class="attraction-card">
-                <img src="images/attraction3.jpg" alt="老街" loading="lazy" />
+                <img src="https://images.unsplash.com/photo-1516996087931-5ae405802f9f" alt="老街" loading="lazy" />
                 <div class="attraction-content">
                   <h3>山林老街</h3>
                   <p class="distance">距離：2公里</p>
@@ -133,7 +133,7 @@
               </div>
 
               <div class="attraction-card">
-                <img src="images/attraction4.jpg" alt="森林公園" loading="lazy" />
+                <img src="https://images.unsplash.com/photo-1448375240586-882707db888b" alt="森林公園" loading="lazy" />
                 <div class="attraction-content">
                   <h3>森林公園</h3>
                   <p class="distance">距離：1.5公里</p>
