重構房間照片區域為輪播樣式，新增輪播按鈕及指示點

--- a/rooms.html
+++ b/rooms.html
@@ -45,11 +45,16 @@
 
           <!-- 豪華雙人房 -->
           <article class="room-card">
-            <div class="room-photos">
-              <img src="images/deluxe-double.jpg" alt="豪華雙人房" class="main-photo" />
-              <div class="photo-gallery">
-                <img src="images/deluxe-double-2.jpg" alt="豪華雙人房浴室" class="thumbnail" />
-                <img src="images/deluxe-double-3.jpg" alt="豪華雙人房景觀" class="thumbnail" />
+            <div class="room-carousel">
+              <div class="carousel-container">
+                <div class="carousel-track">
+                  <img src="images/deluxe-double.jpg" alt="豪華雙人房" class="carousel-slide" />
+                  <img src="images/deluxe-double-2.jpg" alt="豪華雙人房浴室" class="carousel-slide" />
+                  <img src="images/deluxe-double-3.jpg" alt="豪華雙人房景觀" class="carousel-slide" />
+                </div>
+                <button class="carousel-btn prev">&lt;</button>
+                <button class="carousel-btn next">&gt;</button>
+                <div class="carousel-dots"></div>
               </div>
             </div>
             <div class="room-info">
@@ -82,11 +87,16 @@
 
           <!-- 豪華四人房 -->
           <article class="room-card">
-            <div class="room-photos">
-              <img src="images/family-suite.jpg" alt="豪華四人房" class="main-photo" />
-              <div class="photo-gallery">
-                <img src="images/family-suite-2.jpg" alt="豪華四人房客廳" class="thumbnail" />
-                <img src="images/family-suite-3.jpg" alt="豪華四人房用餐區" class="thumbnail" />
+            <div class="room-carousel">
+              <div class="carousel-container">
+                <div class="carousel-track">
+                  <img src="images/family-suite.jpg" alt="豪華四人房" class="carousel-slide" />
+                  <img src="images/family-suite-2.jpg" alt="豪華四人房客廳" class="carousel-slide" />
+                  <img src="images/family-suite-3.jpg" alt="豪華四人房用餐區" class="carousel-slide" />
+                </div>
+                <button class="carousel-btn prev">&lt;</button>
+                <button class="carousel-btn next">&gt;</button>
+                <div class="carousel-dots"></div>
               </div>
             </div>
             <div class="room-info">
@@ -119,11 +129,16 @@
 
           <!-- 總統套房 -->
           <article class="room-card">
-            <div class="room-photos">
-              <img src="images/presidential-suite.jpg" alt="總統套房" class="main-photo" />
-              <div class="photo-gallery">
-                <img src="images/presidential-suite-2.jpg" alt="總統套房客廳" class="thumbnail" />
-                <img src="images/presidential-suite-3.jpg" alt="總統套房會議室" class="thumbnail" />
+            <div class="room-carousel">
+              <div class="carousel-container">
+                <div class="carousel-track">
+                  <img src="images/presidential-suite.jpg" alt="總統套房" class="carousel-slide" />
+                  <img src="images/presidential-suite-2.jpg" alt="總統套房客廳" class="carousel-slide" />
+                  <img src="images/presidential-suite-3.jpg" alt="總統套房會議室" class="carousel-slide" />
+                </div>
+                <button class="carousel-btn prev">&lt;</button>
+                <button class="carousel-btn next">&gt;</button>
+                <div class="carousel-dots"></div>
               </div>
             </div>
             <div class="room-info">
